--- a/smpc-websocket/smpc-server/Cargo.toml
+++ b/smpc-websocket/smpc-server/Cargo.toml
@@ -6,5 +6,10 @@ authors = ["Kushal Pokharel kupokh@iu.edu"]
 
 [dependencies]
 actix = "0.13.5"
+actix-codec = "0.5.2"
 actix-web = "4.11.0"
 anyhow = "1.0.98"
+awc = "3.7.0"
+futures = "0.3.31"
+kzen-paillier = "0.4.3"
+serde_json = "1.0.142"
