--- a/smpc-websocket/smpc-client/Cargo.toml
+++ b/smpc-websocket/smpc-client/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix = "0.13.5"
+actix-http = "3.11.0"
+actix-web = "4.11.0"
+actix-web-actors = "4.3.1"
+anyhow = "1.0.99"
+awc = "3.7.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
