--- a/smpc-websocket/shared/Cargo.toml
+++ b/smpc-websocket/shared/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix = "0.13.5"
+kzen-paillier = "0.4.3"
+serde = { version = "1.0.219", features = ["derive"] }
