--- a/smpc-websocket/smpc-client/Cargo.toml
+++ b/smpc-websocket/smpc-client/Cargo.toml
@@ -10,5 +10,7 @@ actix-web = "4.11.0"
 actix-web-actors = "4.3.1"
 anyhow = "1.0.99"
 awc = "3.7.0"
+kzen-paillier = "0.4.3"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
+shared = { version = "0.1.0", path = "../shared" }
