--- a/smpc-websocket/shared/Cargo.toml
+++ b/smpc-websocket/shared/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 actix = "0.13.5"
 kzen-paillier = "0.4.3"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
