--- a/smpc-websocket/smpc-server/Cargo.toml
+++ b/smpc-websocket/smpc-server/Cargo.toml
@@ -15,3 +15,4 @@ futures = "0.3.31"
 kzen-paillier = "0.4.3"
 serde = "1.0.219"
 serde_json = "1.0.142"
+shared = { version = "0.1.0", path = "../shared" }
