Works in a perfect condition. Todo: verify the correctness and add error handling

--- a/smpc-websocket/smpc-server/Cargo.toml
+++ b/smpc-websocket/smpc-server/Cargo.toml
@@ -11,6 +11,7 @@ actix-http = "3.11.0"
 actix-web = "4.11.0"
 anyhow = "1.0.98"
 awc = "3.7.0"
+curv-kzen = "0.10.0"
 futures = "0.3.31"
 kzen-paillier = "0.4.3"
 serde = "1.0.219"
